--- a/src/components/filters/styles.css
+++ b/src/components/filters/styles.css
@@ -1,7 +1,10 @@
 .filters {
     max-width: 400px;
     width: calc(100% - 10px);
-    /* background-color: red; */
+    position: sticky;
+    top: 20px;
+    height: fit-content;
+    margin-top: 40px;
 }
 
 .filters form {
@@ -33,4 +36,13 @@
     padding: 5px 15px;
     font-size: 16px;
     border-radius: 5px;
+}
+
+@media (max-width: 1000px) {
+    .filters {
+        margin: 20px 0px;
+        max-width: 100%;
+        position: relative;
+        top: 0;
+    }
 }
