--- a/src/components/list/styles.css
+++ b/src/components/list/styles.css
@@ -31,6 +31,10 @@
     overflow-wrap: break-word;
 }
 
+.card h1 {
+    font-size: 1.7em;
+}
+
 .card:hover {
     transform: translateY(-5px);
     box-shadow: 0px 0px 20px dimgray;
